--- a/OCamlEff/lib/dune
+++ b/OCamlEff/lib/dune
@@ -2,7 +2,7 @@
  (name ocamlEff_lib)
  (public_name OCamlEff.Lib)
  (modules Ast Parser Typing Env Eval Tester ParserTests)
- (libraries base angstrom ppx_show.runtime str)
+ (libraries base angstrom ppx_show.runtime)
  (inline_tests)
  (preprocess
   (pps ppx_expect ppx_show ppx_deriving.eq)))
