fix memory in functions

--- a/C/demos/dune
+++ b/C/demos/dune
@@ -46,6 +46,13 @@
  (preprocess
   (pps ppx_deriving.show ppx_deriving.eq)))
 
+; (executable
+;  (name trash)
+;  (modules trash)
+;  (libraries C.Lib)
+;  (preprocess
+;   (pps ppx_deriving.show ppx_deriving.eq)))
+
 (cram
  (deps
   ./demoList.exe
