--- a/C/lib/dune
+++ b/C/lib/dune
@@ -9,7 +9,7 @@
 (library
  (name c_lib)
  (public_name C.Lib)
- (modules Ast Parser Interpreterctx)
+ (modules Ast Parser Interpreterctx BSrch)
  (libraries base angstrom ppx_show.runtime)
  (preprocess
   (pps ppx_expect ppx_show))
