--- a/OCamlTyEff/lib/dune
+++ b/OCamlTyEff/lib/dune
@@ -3,6 +3,7 @@
  (public_name OCamlTyEff.Lib)
  (modules Ast Parser Check Env Eval)
  (libraries base angstrom ppx_show.runtime)
+ (inline_tests)
  (preprocess
   (pps ppx_expect ppx_show ppx_deriving.eq ppx_deriving.ord))
 )
