--- a/OCamlTyEff/lib/dune
+++ b/OCamlTyEff/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name ocaml_typed_effects_lib)
  (public_name OCamlTyEff.Lib)
- (modules Ast Parser Check Interpret)
+ (modules Ast Parser Bind Tychk Interpret)
  (libraries base angstrom ppx_show.runtime)
  (inline_tests)
  (preprocess
