--- a/OCamlEff/demos/dune
+++ b/OCamlEff/demos/dune
@@ -2,37 +2,37 @@
  (name fixpoint)
  (modules fixpoint)
  (public_name fixpoint)
- (libraries OCamlEff.Lib))
+ (libraries OCamlEff.Lib stdio))
 
 (executable
  (name tailrecFold)
  (modules tailrecFold)
  (public_name tailrecFold)
- (libraries OCamlEff.Lib))
+ (libraries OCamlEff.Lib stdio))
 
 (executable
  (name matrixAddition)
  (modules matrixAddition)
  (public_name matrixAddition)
- (libraries OCamlEff.Lib))
+ (libraries OCamlEff.Lib stdio))
 
 (executable
  (name failureEffect)
  (modules failureEffect)
  (public_name failureEffect)
- (libraries OCamlEff.Lib))
+ (libraries OCamlEff.Lib stdio))
 
 (executable
  (name doubleHandling)
  (modules doubleHandling)
  (public_name doubleHandling)
- (libraries OCamlEff.Lib))
+ (libraries OCamlEff.Lib stdio))
 
 (executable
  (name exceptionImitation)
  (modules exceptionImitation)
  (public_name exceptionImitation)
- (libraries OCamlEff.Lib))
+ (libraries OCamlEff.Lib stdio))
 
 (cram
  (deps
