--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -136,7 +136,8 @@ jobs:
         run: npm install -g jscpd
 
       - name: Looking for clones
-        run: python3 ./find_clones.py ${{ env.latest }}
+        run: python3 -m trace --trace ./find_clones.py ${{ env.latest }}
+
       - run: echo ${{ github.event.number }} > PR_number.txt
 
       - run: cat jscpd_report.txt
