--- a/Golang/Golang.cabal
+++ b/Golang/Golang.cabal
@@ -26,13 +26,16 @@ source-repository head
 library
   exposed-modules:
       Ast
+      Interpreter
   other-modules:
       Paths_Golang
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers
     , hspec
+    , mtl
   default-language: Haskell2010
 
 executable Golang-exe
@@ -45,7 +48,9 @@ executable Golang-exe
   build-depends:
       Golang
     , base >=4.7 && <5
+    , containers
     , hspec
+    , mtl
   default-language: Haskell2010
 
 test-suite Golang-test
@@ -59,5 +64,7 @@ test-suite Golang-test
   build-depends:
       Golang
     , base >=4.7 && <5
+    , containers
     , hspec
+    , mtl
   default-language: Haskell2010
