--- a/Golang/package.yaml
+++ b/Golang/package.yaml
@@ -1,14 +1,13 @@
 name:                Golang
 version:             0.1.0.0
-github:              "githubuser/Golang"
+github:              "https://github.com/KarasssDev/fp2021/tree/master/Golang"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+author:              "Karasev Viktor"
+maintainer:          "viktorkarasev27@gmail.com"
+copyright:           "2022 Karasev Viktor"
 
 extra-source-files:
 - README.md
-- ChangeLog.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,7 +16,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/Golang#readme>
+description:         Please see the README on GitHub at <https://github.com/KarasssDev/fp2021/tree/master/Golang/README.md>
 
 dependencies:
 - base >= 4.7 && < 5
