--- a/Golang/Golang.cabal
+++ b/Golang/Golang.cabal
@@ -30,6 +30,8 @@ library
       Errors
       Interpreter
       Runtime
+      Lexer
+      Parser
   other-modules:
       Paths_Golang
   hs-source-dirs:
@@ -37,10 +39,12 @@ library
       src/interpreter
       src/parser
   build-depends:
-      base >=4.7 && <5
+      array
+    , base >=4.7 && <5
     , containers
     , hspec
     , mtl
+    , parsec
   default-language: Haskell2010
 
 executable Golang-exe
@@ -52,10 +56,12 @@ executable Golang-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Golang
+    , array
     , base >=4.7 && <5
     , containers
     , hspec
     , mtl
+    , parsec
   default-language: Haskell2010
 
 test-suite Golang-test
@@ -68,8 +74,10 @@ test-suite Golang-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       Golang
+    , array
     , base >=4.7 && <5
     , containers
     , hspec
     , mtl
+    , parsec
   default-language: Haskell2010
