tmp comment tests

--- a/Golang/package.yaml
+++ b/Golang/package.yaml
@@ -43,13 +43,13 @@ executables:
     dependencies:
     - Golang
 
-tests:
-  Golang-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - Golang
+# tests:
+#   Golang-test:
+#     main:                Spec.hs
+#     source-dirs:         test
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - Golang
