--- a/package.yaml
+++ b/package.yaml
@@ -1,9 +1,9 @@
 name:                Golang
 version:             0.1.0.0
-github:              "KarasssDev/fp2021/Golang"
+github:              "KarasssDev/golang-interpreter"
 license:             BSD3
 author:              "Karasev Viktor"
-maintainer:          "viktorkarasev27@gmail.com"
+maintainer:          "karasssdev@gmail.com"
 copyright:           "2022 Karasev Viktor"
 
 extra-source-files:
@@ -16,7 +16,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/KarasssDev/fp2021/tree/master/Golang/README.md>
+description:         Please see the README on GitHub at <https://github.com/KarasssDev/golang-interpreter/README.md>
 
 dependencies:
 - base >= 4.7 && < 5
