--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build & Test
 
 on:
   pull_request:
@@ -10,13 +10,24 @@ on:
 
 jobs:
   build:
-    name: Hello World
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-haskell@v1.1
         with:
-          ghc-version: '8.8.3' 
+          ghc-version: '8.10.7' 
           enable-stack: true
           stack-version: 'latest'
       - run: stack build
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-haskell@v1.1
+        with:
+          ghc-version: '8.10.7' 
+          enable-stack: true
+          stack-version: 'latest'
+      - run: ./demos/runTest
+
