--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-haskell@v1.1
         with:
-          ghc-version: '8.10.7' 
+          ghc-version: 'latest' 
           enable-stack: true
           stack-version: 'latest'
       - run: stack build
