--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-haskell@v1.1
         with:
-          ghc-version: 'latest' 
+          ghc-version: '9.2.2' 
           enable-stack: true
-          stack-version: 'latest'
+          stack-version: '2.7.5'
       - run: stack build
   test:
     name: Test
