--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,25 +10,58 @@ on:
 
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        ghc: ['8.8.3', '8.10.5']
+        cabal: ['2.4.1.0', '3.0.0.0']
+        os: [ubuntu-latest]
+        resolver: [lts-3.22 , lts-17, lts-18, lts]
+        exclude:
+          # GHC 8.8+ only works with cabal v3+
+          - ghc: 8.8.3
+            cabal: 2.4.1.0
+    name: ${{ matrix.resolver }} (${{ matrix.ghc }}/${{ matrix.cabal }})
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@v1.1
+
+      - name: Check out
+        uses: actions/checkout@v2
+
+      - name: Setup Haskell
+        uses: haskell/actions/setup@v1
         with:
-          ghc-version: '9.2.2' 
+          ghc-version: ${{ matrix.ghc }}
+          cabal-version: ${{ matrix.cabal }}
           enable-stack: true
-          stack-version: '2.7.5'
-      - run: stack build
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-haskell@v1.1
-        with:
-          ghc-version: '8.10.7' 
-          enable-stack: true
-          stack-version: 'latest'
-      - run: ./demos/runTest
+
+      - name: Versions
+        run: |
+          stack --version
+          cabal --version
+          ghc --version
+
+      - name: Initalize stack for LTS
+        run: |
+          stack update
+          stack init --resolver ${{ matrix.resolver }} --force
+
+      - name: Build package dependencies
+        run: |
+          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
+
+      - name: Build package
+        run: |
+          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks
+
+      - name: Build testing dependencies
+        run: |
+          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --test --bench
+
+      - name: Run tests
+        run: |
+          stack --resolver ${{ matrix.resolver }} build --test --no-run-benchmarks
+
+      - name: Package list
+        run: |
+          stack --resolver ${{ matrix.resolver }} exec ghc-pkg list || true
 
