another one try for ci

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        ghc: ['8.8.3', '8.10.5']
-        cabal: ['2.4.1.0', '3.0.0.0']
+        ghc: ['8.10.7']
+        cabal: ['1.12']
         os: [ubuntu-latest]
         resolver: [lts]
-        exclude:
-          # GHC 8.8+ only works with cabal v3+
-          - ghc: 8.8.3
-            cabal: 2.4.1.0
     name: ${{ matrix.resolver }} (${{ matrix.ghc }}/${{ matrix.cabal }})
     steps:
 
