--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,21 +20,6 @@ jobs:
     name: ${{ matrix.resolver }} (${{ matrix.ghc }}/${{ matrix.cabal }})
     steps:
       
-      - uses: actions/cache@v3
-        name: Cache ~/.stack
-        with:
-          path: ~/.stack
-          key: ${{ runner.os }}-stack-global-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
-          restore-keys: |
-                      ${{ runner.os }}-stack-global-
-      
-      - uses: actions/cache@v3
-        name: Cache .stack-work
-        with:
-          path: .stack-work
-          key: ${{ runner.os }}-stack-work-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}-${{ hashFiles('**/*.hs') }}
-          restore-keys: |
-            ${{ runner.os }}-stack-work-
       
       - name: Check out
         uses: actions/checkout@v2
@@ -59,21 +44,14 @@ jobs:
 
       - name: Build package dependencies
         run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --only-dependencies
+          stack build --no-run-tests --no-run-benchmarks --only-dependencies
 
       - name: Build package
         run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks
-
-      - name: Build testing dependencies
-        run: |
-          stack --resolver ${{ matrix.resolver }} build --no-run-tests --no-run-benchmarks --test --bench
+          stack build --no-run-tests --no-run-benchmarks
 
       - name: Run tests
         run: |
           ./demos/runTest
 
-      - name: Package list
-        run: |
-          stack --resolver ${{ matrix.resolver }} exec ghc-pkg list || true
 
