--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,6 @@ jobs:
       run: stack build 
 
     - name: Run tests
-      run: ./demos/runTest
+      run: |
+        ./demos/runTest
+        ./demos/runNDTest
